<resources>
    <string name="home">Home</string>
    <string name="add_group">Add Group: </string>
    <string name="edit_group">Edit Group: </string>
    <string name="group">Group</string>
    <string name="tracker">Tracker</string>
    <string name="graph_or_stat">Graph or Statistic</string>
    <string name="add_tracker">Track something:</string>
    <string name="add">Add</string>
    <string name="group_name">e.g. Daily Activities</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="new_name">New name: </string>
    <string name="graph_or_stat_name">Graph name: </string>
    <string name="tracker_name">Tracker name</string>
    <string name="tracker_type">This is a time or duration</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="select_file">Select File</string>
    <string name="empty_group_hint">Welcome to Track &amp; Graph!\n\n Tap + in the top right and select Tracker to get started.</string>
    <string name="no_trackers_graph_stats_hint">Please create a Tracker before creating any graphs.</string>
    <string name="ru_sure_del_group">Are you sure you want to delete this group and everything in it? You can not reverse this.</string>
    <string name="ru_sure_del_graph">Are you sure you want to delete this graph? You can not reverse this. You will not lose any tracked data.</string>
    <string name="ru_sure_del_feature">Are you sure you want to delete this tracked data?</string>
    <string name="ru_sure_del_data_point">Are you sure you want to delete this data point?</string>
    <string name="export_file_name_suffix" translatable="false">%1$s-%2$s-%3$04d%4$02d%5$02d-%6$02d%7$02d%8$02d.csv</string>
    <string name="backup_file_name_suffix" translatable="false">%1$s-%2$04d%3$02d%4$02d-%5$02d%6$02d%7$02d.db</string>
    <string name="discrete_values">Add some choices below.</string>
    <string name="tracker_name_cannot_be_null">Please add a name</string>
    <string name="tracker_with_that_name_exists">You are already tracking something with that name</string>
    <string name="discrete_value_must_have_name">Please make sure all your choices have names</string>
    <string name="discrete_tracker_needs_at_least_two_values">Please add at least two multiple choice answers</string>
    <string name="data_points">%1$d Tracked</string>
    <string name="no_data">No Data</string>
    <string name="skip">Skip</string>
    <string name="exportButton">Export</string>
    <string name="importButton">Import</string>
    <string name="export_to">Export tracked data in this group to CSV:</string>
    <string name="import_from">Import tracked data to this group from CSV:</string>
    <string name="import_warning">Warning: Importing is irreversible. Track &amp; Graph will try to merge any imported data with existing data in this group by name.</string>
    <string name="graphs_and_statistics"><![CDATA[Graphs & Statistics]]></string>
    <string name="add_a_graph_or_stat">Add a Graph or Statistic</string>
    <string name="graph_type_label">Graph type:</string>
    <string name="maximum_sample_duration">Sample size:</string>
    <string name="select_a_discrete_feature">Select a multiple choice data set: </string>
    <string name="no_discrete_features_pie_chart">You can not currently create a pie chart because you are not tracking anything multiple choice.</string>
    <string name="select_a_feature">Select a data set:</string>
    <string name="offset">Offset:</string>
    <string name="scale">Scale:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="select_a_value_range">Select a value range:</string>
    <string name="graph_name_hint">e.g. Exercise: weekly moving average</string>
    <string name="day">Day</string>
    <string-array name="time_histogram_windows">
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Quaterly</item>
        <item>Biyearly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="date_formats">
        <item>dd/mm/yy</item>
        <item>mm/dd/yy</item>
        <item>yy/mm/dd</item>
    </string-array>
    <string-array name="theme_names_pre_Q">
        <item>Battery Saver</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="theme_names_Q">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="numeric_duration_conversion_modes">
        <item>Number of hours</item>
        <item>Number of minutes</item>
        <item>Number of seconds</item>
    </string-array>
    <string-array name="tracker_types">
        <item>Numerical</item>
        <item>Time duration</item>
    </string-array>
    <string-array name="graph_types">
        <item>Line Graph</item>
        <item>Pie Chart</item>
        <item>Average Time Between</item>
        <item>Time Since</item>
        <item>Time Histogram</item>
    </string-array>
    <string-array name="line_graph_feature_modes">
        <item>No Averaging</item>
        <item>Daily Moving Average</item>
        <item>Three Day Moving Average</item>
        <item>Weekly Moving Average</item>
        <item>Monthly Moving Average</item>
        <item>Three Month Moving Average</item>
        <item>Six Month Moving Average</item>
        <item>Yearly Moving Average</item>
    </string-array>
    <string-array name="line_graph_generation_modes">
        <item>Plot When Tracked</item>
        <item>Plot Hourly Totals</item>
        <item>Plot Daily Totals</item>
        <item>Plot Weekly Totals</item>
        <item>Plot Monthly Totals</item>
        <item>Plot Yearly Totals</item>
    </string-array>
    <string-array name="graph_time_durations">
        <item>All Data</item>
        <item>A Day</item>
        <item>A Week</item>
        <item>A Month</item>
        <item>Three Months</item>
        <item>Six Months</item>
        <item>A Year</item>
    </string-array>
    <string-array name="y_range_styles">
        <item>Dynamic</item>
        <item>Fixed</item>
    </string-array>
    <string-array name="ending_at_values">
        <item>Latest</item>
        <item>Custom date…</item>
    </string-array>
    <string name="import_exception_unknown">Import failed: An unknown error occurred</string>
    <string name="import_exception_bad_headers">Import failed: Headers did not match the expected headers: %1$s</string>
    <string name="import_exception_inconsistent_record">Import failed: Record on line %1$s is not consistent with required headers</string>
    <string name="import_exception_bad_timestamp">Import failed: Could not interpret the timestamp for record on line: %1$s</string>
    <string name="import_exception_inconsistent_data_type">Import failed: Received inconsistent data type on line: %1$s</string>
    <string name="import_exception_bad_discrete_value">Import failed: Failed to read multiple choice value on line: %1$s</string>
    <string name="import_exception_discrete_value_conflict">Import failed: multiple choice value conflict on line: %1$s</string>
    <string name="import_exception_discrete_value_index_exists">Import failed: Failed to read multiple choice value on line: %1$s, index %2$s already exists</string>
    <string name="import_exception_discrete_value_label_exists">Import failed: Failed to read multiple choice value on line: %1$s, label %2$s exists with a different index</string>
    <string name="import_exception_feature_name_too_long">Import failed: name too long on line: %1$s</string>
    <string name="import_exception_max_discrete_values_reached">Import failed: Max multiple choice values for a feature is: %1$s</string>
    <string name="graph_stat_validation_unknown">An unknown error occurred</string>
    <string name="graph_stat_validation_no_name">Please provide a name</string>
    <string name="graph_stat_validation_no_line_graph_features">Please add something to the graph</string>
    <string name="graph_stat_validation_invalid_value_stat_from_to">Please make sure that "From" is smaller than or equal to "To"</string>
    <string name="graph_stat_validation_unrecognised_color">Please make sure all data sets have a color</string>
    <string name="graph_stat_validation_invalid_line_graph_feature">Invalid line graph data set detected</string>
    <string name="graph_stat_validation_bad_fixed_range">Please make sure that "From" is smaller than "To"</string>
    <string name="graph_stat_view_invalid_setup">Complete the setup to see a preview</string>
    <string name="graph_stat_view_not_found">An error occurred while finding this graph</string>
    <string name="graph_stat_view_not_enough_data_stat">This statistic will show when enough data has been tracked to generate it.</string>
    <string name="graph_stat_view_not_enough_data_graph">This graph will show when enough data has been tracked to generate it.</string>
    <string name="finish">Finish</string>
    <string name="about_description"><![CDATA[Track & Graph is free and open source software under the GPL 3.0 License.]]></string>
    <string name="github_link">https://github.com/SamAmco/track-and-graph</string>
    <string name="play_store_page_link">https://play.google.com/store/apps/details?id=com.samco.trackandgraph</string>
    <string name="github_link_friendly">github.com/SamAmco/track-and-graph</string>
    <string name="about_libraries_message">The following open source libraries were used:</string>
    <string name="androidplot" translatable="false">Androidplot</string>
    <string name="apache_2_0" translatable="false">Apache 2.0</string>
    <string name="apache_commons_csv" translatable="false">Apache Commons CSV</string>
    <string name="three_ten_android_backport" translatable="false">Three Ten Android Backport</string>
    <string name="timber" translatable="false">Timber</string>
    <string name="about">About</string>
    <string name="nav_header_title"><![CDATA[Track & Graph]]></string>
    <string name="faq_1">How do I start tracking something?</string>
    <string name="faq_2">How do I import / export what I have tracked?</string>
    <string name="faq_3">How does multiple choice data work?</string>
    <string name="faq_4">How do I start creating graphs?</string>
    <string name="faq_5">How are moving averages and plot totals calculated?</string>
    <string name="faq_6">How do notes work?</string>
    <string name="faq">FAQ</string>
    <string name="faq_text_1_1">To begin tracking you will need to create a Tracker.</string>
    <string name="faq_text_1_4">Type in the name of what you want to track and select an input style:</string>
    <string name="use_default_value">Set a default value</string>
    <string name="default_value_description_hint">(Your default will be used automatically when you add a data point but you can always go back and change it.)</string>
    <string name="add_a_longer_description_optional">Add a longer description (optional)</string>
    <string name="add_multiple_choice_answer_button_content_description">Add multiple choice answer button</string>
    <string name="default_value">Default value</string>
    <string name="numeric_to_duration_mode_header">Previously tracked values represent:</string>
    <string name="duration_to_numeric_mode_header">What should previously tracked values be converted to:</string>
    <string name="filter_by_label">Filter by label</string>
    <string name="filter_by_value">Filter by value range</string>
    <string name="name_your_function">Name your function: </string>
    <string name="write_your_function_here"># Write your function here</string>
    <string name="add_some_data_sources">Add some data sources</string>
</resources>