<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/baseLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_padding"
                android:layout_marginTop="@dimen/card_padding"
                android:layout_marginEnd="@dimen/card_padding"
                android:orientation="vertical"
                android:paddingBottom="60dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dialog_input_spacing"
                    android:labelFor="@id/tracker_name_text"
                    android:text="@string/tracker_name"
                    android:textAppearance="@style/TextAppearance.Body" />

                <EditText
                    android:id="@+id/tracker_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:maxLines="1" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tracker_description"
                    style="@style/Style.ExpansiveTextInputStyle"
                    android:layout_marginTop="@dimen/dialog_input_spacing"
                    android:hint="@string/add_a_longer_description_optional" />

                <TextView
                    android:id="@+id/trackerTypeLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_spacing_large"
                    android:text="@string/tracker_type"
                    android:textAppearance="@style/TextAppearance.Body" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/tracker_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dialog_input_spacing"
                    android:entries="@array/tracker_types"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/numericToDurationModeHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_spacing_large"
                    android:text="@string/numeric_to_duration_mode_header"
                    android:textAppearance="@style/TextAppearance.Body" />

                <TextView
                    android:id="@+id/durationToNumericModeHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_spacing_large"
                    android:text="@string/duration_to_numeric_mode_header"
                    android:textAppearance="@style/TextAppearance.Body" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/durationNumericConversionModeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dialog_input_spacing"
                    android:entries="@array/numeric_duration_conversion_modes"
                    android:spinnerMode="dropdown" />

                <CheckBox
                    android:id="@+id/hasDefaultValueCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_spacing_large"
                    android:text="@string/use_default_value"
                    android:textAppearance="@style/TextAppearance.Body" />

                <TextView
                    android:id="@+id/defaultValueHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value_description_hint"
                    android:textAppearance="@style/TextAppearance.Body" />

                <EditText
                    android:id="@+id/defaultNumericalInput"
                    style="@style/Style.DataPointInputNumberStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dialog_input_spacing"
                    android:hint="@string/default_value"
                    android:importantForAutofill="no" />

                <com.samco.trackandgraph.ui.DurationInputView
                    android:id="@+id/defaultDurationInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/addBar"
            layout="@layout/validate_add_footer" />

        <FrameLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </FrameLayout>

</layout>
