<?xml version="1.0" encoding="utf-8"?>

<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_spacing_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/valueStatFeatureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_a_feature"
                android:textAppearance="@style/TextAppearance.Body" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/valueStatFeatureSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="?attr/colorControlHighlight"
                android:spinnerMode="dialog" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardLabelInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_margin_small"
            android:layout_marginTop="@dimen/input_spacing_large"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:contentPadding="@dimen/card_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/valueStatFeatureSpinner">

                <CheckBox
                    android:id="@+id/checkFilterByLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_by_label" />

                <HorizontalScrollView
                    android:id="@+id/labelButtonScrollView"
                    style="@style/Style.DiscreteValueButtonsScrollViewStyle">
                    <LinearLayout
                        android:id="@+id/valueStatLabelsInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal" />
                </HorizontalScrollView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_margin_small"
            android:layout_marginVertical="@dimen/input_spacing_large"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:contentPadding="@dimen/card_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/valueStatFeatureSpinner">

                <CheckBox
                    android:id="@+id/checkFilterByValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_by_value" />

                <LinearLayout
                    android:id="@+id/valueStatDurationRangeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/valueStatFeatureSpinner">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dialog_input_spacing"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/valueStatDurationFromLabel"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/from"
                            android:textAlignment="textEnd"
                            android:textAppearance="@style/TextAppearance.Body" />

                        <com.samco.trackandgraph.ui.DurationInputView
                            android:id="@+id/valueStatDurationFromInput"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dialog_input_spacing"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/valueStatDurationToLabel"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/to"
                            android:textAlignment="textEnd"
                            android:textAppearance="@style/TextAppearance.Body" />

                        <com.samco.trackandgraph.ui.DurationInputView
                            android:id="@+id/valueStatDurationToInput"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/valueStatContinuousValueInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/valueStatFeatureSpinner">

                    <TextView
                        android:id="@+id/valueStatFromLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dialog_input_spacing"
                        android:paddingBottom="8dp"
                        android:text="@string/from"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.Body"
                        app:layout_constraintBottom_toBottomOf="@id/valueStatFromInput"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/valueStatFromInput" />

                    <EditText
                        android:id="@+id/valueStatFromInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:digits="0123456789.,-"
                        android:gravity="center"
                        android:hint="0"
                        android:importantForAutofill="no"
                        android:inputType="numberSigned|numberDecimal"
                        android:singleLine="true"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toRightOf="@id/valueStatFromLabel"
                        app:layout_constraintRight_toLeftOf="@id/valueStatToLabel"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/valueStatToLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/to"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.Body"
                        app:layout_constraintBottom_toBottomOf="@id/valueStatToInput"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toRightOf="@id/valueStatFromInput"
                        app:layout_constraintRight_toLeftOf="@id/valueStatToInput" />

                    <EditText
                        android:id="@+id/valueStatToInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:digits="0123456789.,-"
                        android:gravity="center"
                        android:hint="0"
                        android:importantForAutofill="no"
                        android:inputType="numberSigned|numberDecimal"
                        android:singleLine="true"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toRightOf="@id/valueStatToLabel"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="HardcodedText" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>